[package]
name = "rusty_defender"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.9", features = ["dynamic", "bevy_gltf"] }
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render" ] }
bevy-inspector-egui = { version = "*"}
rand = "0.8.4"